flux/platform/dc-webhook/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dc-api-webhook
  namespace: dc-webhook-system
spec:
  type: ClusterIP
  selector:
    app: dc-api-webhook
  ports:
    - name: https
      port: 443
      targetPort: 9443
